kubernetes/manifests/apps/glance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: glance
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: glance
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: glance
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: glance
        app.kubernetes.io/name: glance
    spec:
      automountServiceAccountToken: true
      containers:
        - image: glanceapp/glance:v0.8.4@sha256:6df86a7e8868d1eda21f35205134b1962c422957e42a0c44d4717c8e8f741b1a
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config/glance.yml
              name: glance
              readOnly: true
              subPath: glance.yml
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - configMap:
            items:
              - key: glance.yml
                path: glance.yml
            name: glance-config
          name: glance
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.127
    lbipam.cilium.io/sharing-key: glance
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: glance
    app.kubernetes.io/service: glance
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: glance
  namespace: apps
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: glance
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: glance
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: glance.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - glance.josevictor.me
      secretName: wildcard-tls
